tests/machine/x/java/group_by_multi_join_sort.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsgroup_by_multi_join_sort1672977961/001/Main.java:19: error: bad operand types for binary operator '>='
					if (!(Boolean.TRUE.equals(((Number)Boolean.TRUE.equals(((Number)((Map)o).get("o_orderdate")).doubleValue() >= start_date) && Boolean.TRUE.equals(((Map)o).get("o_orderdate"))).doubleValue() < end_date) && Boolean.TRUE.equals(((Map)l).get("l_returnflag")) == "R")) continue;
					                                                                                                           ^
  first type:  double
  second type: String
/tmp/TestCompileValidProgramsgroup_by_multi_join_sort1672977961/001/Main.java:19: error: bad operand types for binary operator '&&'
					if (!(Boolean.TRUE.equals(((Number)Boolean.TRUE.equals(((Number)((Map)o).get("o_orderdate")).doubleValue() >= start_date) && Boolean.TRUE.equals(((Map)o).get("o_orderdate"))).doubleValue() < end_date) && Boolean.TRUE.equals(((Map)l).get("l_returnflag")) == "R")) continue;
					                                                                                                                          ^
  first type:  Number
  second type: boolean
/tmp/TestCompileValidProgramsgroup_by_multi_join_sort1672977961/001/Main.java:19: error: bad operand types for binary operator '=='
					if (!(Boolean.TRUE.equals(((Number)Boolean.TRUE.equals(((Number)((Map)o).get("o_orderdate")).doubleValue() >= start_date) && Boolean.TRUE.equals(((Map)o).get("o_orderdate"))).doubleValue() < end_date) && Boolean.TRUE.equals(((Map)l).get("l_returnflag")) == "R")) continue;
					                                                                                                                                                                                                                                                              ^
  first type:  boolean
  second type: String
/tmp/TestCompileValidProgramsgroup_by_multi_join_sort1672977961/001/Main.java:36: error: cannot find symbol
		_res0.add(new LinkedHashMap<>(){{put("c_custkey", g.key.c_custkey);put("c_name", g.key.c_name);put("revenue", sum((List<Number>)(List<?>)(new java.util.function.Supplier<List<Object>>() {public List<Object> get() {
		                                                   ^
  symbol:   variable key
  location: variable g of type List<Object>
/tmp/TestCompileValidProgramsgroup_by_multi_join_sort1672977961/001/Main.java:36: error: cannot find symbol
		_res0.add(new LinkedHashMap<>(){{put("c_custkey", g.key.c_custkey);put("c_name", g.key.c_name);put("revenue", sum((List<Number>)(List<?>)(new java.util.function.Supplier<List<Object>>() {public List<Object> get() {
		                                                                                  ^
  symbol:   variable key
  location: variable g of type List<Object>
/tmp/TestCompileValidProgramsgroup_by_multi_join_sort1672977961/001/Main.java:42: error: cannot find symbol
}}).get()));put("c_acctbal", g.key.c_acctbal);put("n_name", g.key.n_name);put("c_address", g.key.c_address);put("c_phone", g.key.c_phone);put("c_comment", g.key.c_comment);}});
                              ^
  symbol:   variable key
  location: variable g of type List<Object>
/tmp/TestCompileValidProgramsgroup_by_multi_join_sort1672977961/001/Main.java:42: error: cannot find symbol
}}).get()));put("c_acctbal", g.key.c_acctbal);put("n_name", g.key.n_name);put("c_address", g.key.c_address);put("c_phone", g.key.c_phone);put("c_comment", g.key.c_comment);}});
                                                             ^
  symbol:   variable key
  location: variable g of type List<Object>
/tmp/TestCompileValidProgramsgroup_by_multi_join_sort1672977961/001/Main.java:42: error: cannot find symbol
}}).get()));put("c_acctbal", g.key.c_acctbal);put("n_name", g.key.n_name);put("c_address", g.key.c_address);put("c_phone", g.key.c_phone);put("c_comment", g.key.c_comment);}});
                                                                                            ^
  symbol:   variable key
  location: variable g of type List<Object>
/tmp/TestCompileValidProgramsgroup_by_multi_join_sort1672977961/001/Main.java:42: error: cannot find symbol
}}).get()));put("c_acctbal", g.key.c_acctbal);put("n_name", g.key.n_name);put("c_address", g.key.c_address);put("c_phone", g.key.c_phone);put("c_comment", g.key.c_comment);}});
                                                                                                                            ^
  symbol:   variable key
  location: variable g of type List<Object>
/tmp/TestCompileValidProgramsgroup_by_multi_join_sort1672977961/001/Main.java:42: error: cannot find symbol
}}).get()));put("c_acctbal", g.key.c_acctbal);put("n_name", g.key.n_name);put("c_address", g.key.c_address);put("c_phone", g.key.c_phone);put("c_comment", g.key.c_comment);}});
                                                                                                                                                            ^
  symbol:   variable key
  location: variable g of type List<Object>
Note: /tmp/TestCompileValidProgramsgroup_by_multi_join_sort1672977961/001/Main.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors


  1| let nation = [
  2|   { n_nationkey: 1, n_name: "BRAZIL" }